# pc_normal_estimation

./: CMakeLists.txt  package.xml
docker/: Dockerfile  build.sh  get_into_container.sh  interact.sh
launch/: hdl32e.launch  hdl32e_omp.launch  no_viewer.launch  normal_estimation_pcl.launch  normal_estimation_pcl_multithreads.launch  normal_estimation_pcl_omp.launch  omp_flexible_search_range.launch  playbag.launch  single_node.launch
rviz_config/: normal_estimation.rviz  velodyne.rviz
src/: no_viewer.cpp  normal_estimation.cpp  normal_estimation_omp.cpp  normal_estimation_pcl.cpp  normal_estimation_pcl_multithreads.cpp  normal_estimation_pcl_omp.cpp  omp_flexible_search_range.cpp
